<resources>
    <string name="app_name">unnieApp</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    // sb = school board
    <string name="sb_name">진로고민</string>
    // hp = hospital board
    <string name="hb_name">질병고민</string>
    // gb = government board
    <string name="gb_name">정부정책</string>
    //jb = jobsearch board
    <string name="jb_name">채용정보</string>
    <string name="db_name">기부</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="sign_up_check">sign up check</string>
</resources>