<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_SignUpActivity"
    android:background="@color/AllBackground"
    android:orientation="vertical"
    android:gravity="center">


<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:text="닉네임" />-->

<!--        <EditText-->
<!--            android:id="@+id/user_new_nickname"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:hint="@string/prompt_email"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:autofillHints="" />-->

<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/id" />

        <EditText
            android:id="@+id/user_new_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pwd" />

        <EditText
            android:id="@+id/user_new_pwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:autofillHints="" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_signup_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/sign_up_check" />


</LinearLayout>